# ofir-ai-brain

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
app/: __init__.py  config.py  drive_sync.py  embeddings.py  evaluator.py  exceptions.py  logging_config.py  main.py  metrics.py  observability.py  rag_pipeline.py  retriever.py  schemas.py  vector_store.py  weekly_intelligence.py  weekly_report.py
docs/: DEPLOYMENT.md  GITHUB_SSH.md  GOOGLE_CREDENTIALS_SETUP.md
tests/: conftest.py  test_api.py  test_drive_sync.py  test_embeddings.py  test_evaluator.py  test_retriever.py  test_vector_store.py
