[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ofir-ai-brain"
version = "0.1.0"
description = "Production RAG system with Drive sync, hybrid retrieval, and weekly reporting"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23.0", "httpx>=0.26.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
